[workspace]

members = [
    "alliance",
    "assets",
    "atomic-swap",
    "bags-list",
    "bags-list/remote-tests",
    "bags-list/fuzzer",
    "bounties",
    "child-bounties",
    "collective",
    "conviction-voting",
    "democracy",
    "examples/basic",
    "examples/offchain-worker",
    "fast-unstake",
    "glutton",
    "identity",
]