[package]
name = "pallet-assets"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME asset management pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
# Needed for various traits. In our case, `OnFinalize`.
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
# Needed for type-safe access to storage DB.
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
# `system` module provides us with all sorts of useful stuff and macros depend on it being around.
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
frame-benchmarking = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", optional = true }
sp-core = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }

[dev-dependencies]
sp-std = { version = "5.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"sp-core/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
	"frame-benchmarking?/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = ["frame-support/try-runtime"]
