[package]
name = "pallet-bags-list"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet bags list"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# parity
codec = { package = "parity-scale-codec", version = "3.2.2", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

# primitives
sp-runtime = { version = "7.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
sp-std = { version = "5.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }

# FRAME
frame-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
frame-system = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
frame-election-provider-support = { version = "4.0.0-dev", default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }

# third party
log = { version = "0.4.17", default-features = false }

# Optional imports for benchmarking
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", optional = true, default-features = false }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", optional = true, default-features = false }
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", optional = true, default-features = false }
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", optional = true, default-features = false }
sp-tracing = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", optional = true, default-features = false }

[dev-dependencies]
sp-core = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966"}
sp-io = { version = "7.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966"}
sp-tracing = { version = "6.0.0", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
pallet-balances = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
frame-election-provider-support = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }
frame-benchmarking = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966" }

[features]
default = ["std"]
std = [
	"sp-tracing?/std",
	"sp-io?/std",
	"sp-core?/std",
	"pallet-balances?/std",
	"frame-benchmarking?/std",
	"scale-info/std",
	"codec/std",
	"sp-runtime/std",
	"sp-std/std",
	"frame-support/std",
	"frame-system/std",
	"frame-election-provider-support/std",
	"log/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"sp-core",
	"sp-io",
	"pallet-balances/runtime-benchmarks",
	"sp-tracing",
	"frame-election-provider-support/runtime-benchmarks",
]
fuzz = [
	"sp-core",
	"sp-io",
	"pallet-balances",
	"sp-tracing",
	"frame-election-provider-support/fuzz",
]
try-runtime = [ "frame-support/try-runtime", "frame-election-provider-support/try-runtime" ]
