[package]
name = "pallet-bags-list-remote-tests"
version = "4.0.0-dev"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet bags list remote test"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# frame
pallet-staking = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "4.0.0-dev" }
pallet-bags-list = { path = "../../bags-list", version = "4.0.0-dev", features = ["fuzz"] }
frame-election-provider-support = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "4.0.0-dev" }
frame-system = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "4.0.0-dev" }
frame-support = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "4.0.0-dev" }

# core
sp-storage = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "7.0.0" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "7.0.0" }
sp-tracing = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "6.0.0" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "7.0.0" }
sp-std = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "5.0.0" }

# utils
remote-externalities = { git = "https://github.com/paritytech/substrate.git", rev = "b7e0518966", version = "0.10.0-dev", package = "frame-remote-externalities" }

# others
log = "0.4.17"
